# MOSPROM_FROGS

./: .gitignore  README.MD  docker-compose.yml  example_q.txt  knowledge.txt
back/: go.mod  go.sum
back/cmd/: main.go
back/internal/: app.go
back/internal/client/: client.go  ping.go
back/internal/database/: auth.go  chat.go  hide.go  history.go  init.go  like.go  qawrite.go  reg.go  support.go
back/internal/database/migrations/: 20250929204718_create_tables.sql  20251018170519_add_support_table.sql  Dockerfile
back/internal/database/queries/: answer.sql  authentication.sql  check_chat.sql  (+10 more)
back/internal/s3/: init.go  voice.go
back/internal/settings/: config.go
back/internal/web/: routes.go
back/pkg/: jwt_gen.go
front/h/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
front/h/src/: App.css  App.tsx  index.css  main.tsx  styles.css
model/: Dockerfile  State.py  __init__.py  agent_workflow.py  build_kb.py  config.py  docling_test_input.md  docling_test_input.txt  initial_text_parsing.py  local_calls.py  main.py  model.py  prompts.py  pyproject.toml  requirements.txt  tools.py  try.py  ulitsDocling.py  utils.py
model/raptor/: EmbeddingModels.py  QAModels.py  RetrievalAugmentation.py  SummarizationModels.py  __init__.py  cluster_tree_builder.py  cluster_utils.py  raptorRag.py  requirements.txt  tree_builder.py  tree_retriever.py  utils.py
recognizer/: Dockerfile  recognizer.py  requirements.txt
sglang/: Dockerfile  README.md  entrypoint.sh  models.yaml  requirements.txt
sglang/scripts/: download_models.py
(+35 files in other folders)
